chore: laravel config, finish 0.1 task

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,7 @@
-APP_NAME="Blade CMS"
+APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_TIMEZONE=UTC
 APP_URL=http://localhost
 
 APP_LOCALE=en
@@ -12,10 +11,7 @@ APP_FAKER_LOCALE=en_US
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
 
-# Multi-tenant configuration
-# Current tenant resolution strategy: session-based
-# Future: subdomain-based (tenant.app.com) or path-based (/tenant)
-TENANT_RESOLUTION_STRATEGY=session
+# PHP_CLI_SERVER_WORKERS=4
 
 BCRYPT_ROUNDS=12
 
@@ -24,15 +20,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-# Database Configuration
-# Multi-tenant strategy: single database with tenant_id scoping
-# Alternative strategies: separate databases per tenant (requires dynamic connection)
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=blade_cms
-DB_USERNAME=root
-DB_PASSWORD=
+DB_CONNECTION=sqlite
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=laravel
+# DB_USERNAME=root
+# DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -45,7 +38,7 @@ FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
 CACHE_STORE=database
-CACHE_PREFIX=
+# CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
 
@@ -54,15 +47,13 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-# Mail Configuration
-# Used for form submission notifications to admins
 MAIL_MAILER=log
+MAIL_SCHEME=null
 MAIL_HOST=127.0.0.1
 MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="noreply@example.com"
+MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
@@ -71,10 +62,4 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-# Vite Configuration
 VITE_APP_NAME="${APP_NAME}"
-
-# SaaS Plan Limits (optional, for future billing integration)
-# FREE_PLAN_SUBMISSIONS_LIMIT=100
-# BASIC_PLAN_SUBMISSIONS_LIMIT=1000
-# PRO_PLAN_SUBMISSIONS_LIMIT=unlimited
