--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,24 @@
-# Dependencies
-/vendor
-/node_modules
-
-# Laravel
+*.log
+.DS_Store
 .env
 .env.backup
 .env.production
+.phpactor.json
 .phpunit.result.cache
+/.fleet
+/.idea
+/.nova
+/.phpunit.cache
+/.vscode
+/.zed
+/auth.json
+/node_modules
+/public/build
+/public/hot
+/public/storage
+/storage/*.key
+/storage/pail
+/vendor
 Homestead.json
 Homestead.yaml
-npm-debug.log
-yarn-error.log
-
-# Storage
-/storage/*.key
-/public/storage
-/public/hot
-
-# IDE
-.idea/
-.vscode/
-*.swp
-*.swo
-*~
-.DS_Store
-
-# Testing
-coverage/
-.phpunit.cache/
+Thumbs.db
