--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
-APP_NAME=Laravel
+APP_NAME="Blade CMS"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
+APP_TIMEZONE=UTC
 APP_URL=http://localhost
 
 APP_LOCALE=en
@@ -10,6 +11,11 @@ APP_FAKER_LOCALE=en_US
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
+
+# Multi-tenant configuration
+# Current tenant resolution strategy: session-based
+# Future: subdomain-based (tenant.app.com) or path-based (/tenant)
+TENANT_RESOLUTION_STRATEGY=session
 
 # PHP_CLI_SERVER_WORKERS=4
 
@@ -20,12 +26,16 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+# Database Configuration
+# Multi-tenant strategy: single database with tenant_id scoping
+# All tenant-specific tables include a tenant_id column for data isolation
+# Alternative strategies: separate databases per tenant (requires dynamic connection)
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=blade_cms
+DB_USERNAME=root
+DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
