--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,10 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      
+      - name: Install jq
+        run: sudo apt-get update && sudo apt-get install -y jq
+
 
       - name: Get last tag
         id: last_tag
