Composer Path Repositoriesfor modules

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,8 @@
 Homestead.json
 Homestead.yaml
 Thumbs.db
+
+# Modules - managed as separate repositories via Composer
+/app/Modules/*
+!/app/Modules/.gitkeep
+!/app/Modules/*.md
