--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,15 @@
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.10.1"
     },
+    "repositories": [
+        {
+            "type": "path",
+            "url": "../blade-modules/*",
+            "options": {
+                "symlink": true
+            }
+        }
+    ],
     "require-dev": {
         "fakerphp/faker": "^1.23",
         "larastan/larastan": "^3.8",
@@ -26,8 +35,7 @@
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/",
-            "App\\Modules\\": "app/Modules/"
+            "Database\\Seeders\\": "database/seeders/"
         }
     },
     "autoload-dev": {
