--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,10 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "bladecms/module-blog": "@dev",
+        "bladecms/module-booking": "@dev",
         "laravel/framework": "^11.0",
-        "laravel/tinker": "^2.10.1",
-        "bladecms/module-blog": "@dev"
+        "laravel/tinker": "^2.10.1"
     },
     "repositories": [
         {
